--- a/index.html
+++ b/index.html
@@ -1207,35 +1207,35 @@
                 <div class="contact-info-section">
                     <h3 style="color: white; margin-bottom: 20px; font-size: 1.5rem;">Contact Information</h3>
                     <div class="contact-grid">
-                        <a href="mailto:dhruvmali9039@gmail.com" class="contact-item" style="text-decoration: none; color: inherit; transition: transform 0.3s ease;">
+                        <a href="mailto:dhruvmali9039@gmail.com" class="contact-item" style="text-decoration: none; color: white; transition: transform 0.3s ease;">
                             <span class="contact-icon">📧</span>
                             <div>
                                 <div>Email</div>
                                 <div>dhruvmali9039@gmail.com</div>
                             </div>
                         </a>
-                        <a href="tel:+918980237478" class="contact-item" style="text-decoration: none; color: inherit; transition: transform 0.3s ease;">
+                        <a href="tel:+918980237478" class="contact-item" style="text-decoration: none; color: white; transition: transform 0.3s ease;">
                             <span class="contact-icon">📱</span>
                             <div>
                                 <div>Phone</div>
                                 <div>+91-8980237478</div>
                             </div>
                         </a>
-                        <a href="https://linkedin.com/in/dhruv-mali-114435221" target="_blank" class="contact-item" style="text-decoration: none; color: inherit; transition: transform 0.3s ease;">
+                        <a href="https://linkedin.com/in/dhruv-mali-114435221" target="_blank" class="contact-item" style="text-decoration: none; color: white; transition: transform 0.3s ease;">
                             <span class="contact-icon">💼</span>
                             <div>
                                 <div>LinkedIn</div>
                                 <div>dhruv-mali-114435221</div>
                             </div>
                         </a>
-                        <a href="https://github.com/Dhruv-Mali" target="_blank" class="contact-item" style="text-decoration: none; color: inherit; transition: transform 0.3s ease;">
+                        <a href="https://github.com/Dhruv-Mali" target="_blank" class="contact-item" style="text-decoration: none; color: white; transition: transform 0.3s ease;">
                             <span class="contact-icon">🔗</span>
                             <div>
                                 <div>GitHub</div>
                                 <div>github.com/Dhruv-Mali</div>
                             </div>
                         </a>
-                        <a href="https://maps.google.com/?q=Surat,Gujarat,India" target="_blank" class="contact-item" style="text-decoration: none; color: inherit; transition: transform 0.3s ease;">
+                        <a href="https://maps.google.com/?q=Surat,Gujarat,India" target="_blank" class="contact-item" style="text-decoration: none; color: white; transition: transform 0.3s ease;">
                             <span class="contact-icon">📍</span>
                             <div>
                                 <div>Location</div>
