--- a/index.html
+++ b/index.html
@@ -808,7 +808,15 @@
         }
     </style>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDE0SV9XSC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-FDE0SV9XSC');
+</script>
 <body>
     <!-- Animated background -->
     <div class="bg-animation" id="bgAnimation"></div>
