--- a/index.html
+++ b/index.html
@@ -112,12 +112,8 @@
         .logo {
             font-size: 1.5rem;
             font-weight: bold;
-            color: var(--text-primary);
+            color: #ffffff;
             text-decoration: none;
-            background: var(--background-secondary);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
         }
 
         .nav-menu {
@@ -411,7 +407,7 @@
 
         .skill-icon {
             font-size: 3rem;
-            margin-bottom: 15px;
+            margin: 0 auto 15px;
             display: block;
         }
 
@@ -823,7 +819,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="logo">DM</a>
+            <a href="#" class="logo">Dhruv Mali</a>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -879,39 +875,39 @@
             <h2 class="section-title">Technical Skills</h2>
             <div class="skills-grid">
                 <div class="skill-item">
-                    <span class="skill-icon">☁️</span>
+                    <img src="./icons/AWS.png" alt="AWS" class="skill-icon" style="width: 48px; height: 48px;">
                     <div class="skill-name">AWS Cloud</div>
                 </div>
                 <div class="skill-item">
-                    <span class="skill-icon">🐍</span>
+                    <img src="./icons/python.png" alt="Python" class="skill-icon" style="width: 48px; height: 48px;">
                     <div class="skill-name">Python</div>
                 </div>
                 <div class="skill-item">
-                    <span class="skill-icon">☕</span>
-                    <div class="skill-name">Java</div>
+                    <img src="./icons/java-script.png" alt="JavaScript" class="skill-icon" style="width: 48px; height: 48px;">
+                    <div class="skill-name">JavaScript</div>
                 </div>
                 <div class="skill-item">
-                    <span class="skill-icon">🗄️</span>
-                    <div class="skill-name">Database Management</div>
+                    <img src="./icons/mysql.png" alt="MySQL" class="skill-icon" style="width: 48px; height: 48px;">
+                    <div class="skill-name">MySQL</div>
                 </div>
                 <div class="skill-item">
-                    <span class="skill-icon">🔧</span>
-                    <div class="skill-name">DevOps Tools</div>
+                    <img src="./icons/devops.png" alt="DevOps" class="skill-icon" style="width: 48px; height: 48px;">
+                    <div class="skill-name">DevOps</div>
                 </div>
                 <div class="skill-item">
-                    <span class="skill-icon">🐧</span>
-                    <div class="skill-name">Linux & Servers</div>
+                    <img src="./icons/linux.png" alt="Linux" class="skill-icon" style="width: 48px; height: 48px;">
+                    <div class="skill-name">Linux</div>
                 </div>
                 <div class="skill-item">
-                    <span class="skill-icon">📱</span>
-                    <div class="skill-name">Git & GitHub</div>
+                    <img src="./icons/github.png" alt="GitHub" class="skill-icon" style="width: 48px; height: 48px;">
+                    <div class="skill-name">GitHub</div>
                 </div>
                 <div class="skill-item">
-                    <span class="skill-icon">🚀</span>
+                    <img src="./icons/terraform.png" alt="Terraform" class="skill-icon" style="width: 48px; height: 48px;">
                     <div class="skill-name">Terraform</div>
                 </div>
                 <div class="skill-item">
-                    <span class="skill-icon">🐳</span>
+                    <img src="./icons/Docker.png" alt="Docker" class="skill-icon" style="width: 48px; height: 48px;">
                     <div class="skill-name">Docker</div>
                 </div>
             </div>
@@ -922,19 +918,19 @@
             <h2 class="section-title">Featured Projects</h2>
 
             <div class="project-card">
-                <div class="project-title">Cloud-Based E-Commerce Platform</div>
+                <div class="project-title">AWS S3 Cloud Storage System</div>
                 <div class="project-description">
-                    A comprehensive e-commerce solution built on AWS infrastructure, demonstrating real-world backend
-                    skills,
-                    cloud architecture, and DevOps implementation. Features scalable database management with RDS,
-                    efficient content delivery through CloudFront, and robust server deployment on EC2.
+                    Developed a full-stack cloud storage web application using Python Flask and AWS S3 for secure file management.
+                    Implemented pre-signed URLs for temporary file sharing with 99.99% uptime using AWS infrastructure.
+                    Built RESTful APIs for file operations (upload, download, delete) with proper error handling and validation.
+                    Designed responsive UI with Bootstrap 5, featuring real-time storage statistics and file management dashboard.
                 </div>
                 <div class="project-tags">
-                    <span class="tag">AWS EC2</span>
-                    <span class="tag">MySQL RDS</span>
-                    <span class="tag">S3</span>
-                    <span class="tag">CloudFront</span>
-                    <span class="tag">DevOps</span>
+                    <span class="tag">Python</span>
+                    <span class="tag">Flask</span>
+                    <span class="tag">AWS S3</span>
+                    <span class="tag">Boto3</span>
+                    <span class="tag">Bootstrap 5</span>
                 </div>
             </div>
 
@@ -951,6 +947,22 @@
                     <span class="tag">HTML/CSS/JS</span>
                     <span class="tag">Bootstrap</span>
                     <span class="tag">AWS EC2</span>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-title">Automated Django Deployment Pipeline</div>
+                <div class="project-description">
+                    Built end-to-end CI/CD pipeline reducing deployment time from 2 hours to 15 minutes.
+                    Created Bash scripts for automated environment setup, dependency management, and database migrations.
+                    Implemented monitoring and logging for 24/7 application health tracking.
+                </div>
+                <div class="project-tags">
+                    <span class="tag">Django</span>
+                    <span class="tag">Bash</span>
+                    <span class="tag">AWS EC2</span>
+                    <span class="tag">GitHub Actions</span>
+                    <span class="tag">CI/CD</span>
                 </div>
             </div>
         </section>
@@ -1021,6 +1033,7 @@
             <h2 class="section-title">Certifications</h2>
 
             <div class="project-card">
+                <img src="./certification/aws-academy-graduate-cloud-foundations-training-bad.png" alt="AWS Cloud Foundations" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
                 <div class="project-title">AWS Academy Graduate - AWS Academy Cloud Foundations</div>
                 <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services | April 07, 2025</div>
                 <div class="project-description">
@@ -1031,6 +1044,37 @@
                     <span class="tag">AWS Cloud</span>
                     <span class="tag">AWS Core Services</span>
                     <span class="tag">AWS Support</span>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <img src="./certification/aws-academy-graduate-cloud-architecting-training-ba (1).png" alt="AWS Cloud Architecting" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
+                <div class="project-title">AWS Academy Graduate - Cloud Architecting - Training Badge</div>
+                <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services Training and Certification | October 01, 2025</div>
+                <div class="project-description">
+                    Advanced training in designing and deploying scalable, highly available, and fault-tolerant systems on AWS.
+                </div>
+                <div class="project-tags">
+                    <span class="tag">Cloud Architecture</span>
+                    <span class="tag">AWS Solutions</span>
+                    <span class="tag">High Availability</span>
+                    <span class="tag">Scalability</span>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <img src="./certification/microsoft-certified-fundamentals-badge.svg" alt="Microsoft Azure" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
+                <div class="project-title">Microsoft Azure Fundamentals</div>
+                <div style="color: #0078D4; margin-bottom: 10px;">Microsoft | June 22, 2023
+                </div>
+                <div class="project-description">
+                    Foundational knowledge of cloud services and how those services are provided with Microsoft Azure.
+                </div>
+                <div class="project-tags">
+                    <span class="tag">Azure Cloud</span>
+                    <span class="tag">Cloud Services</span>
+                    <span class="tag">Azure Architecture</span>
+                    <span class="tag">Cloud Computing</span>
                 </div>
             </div>
 
@@ -1047,36 +1091,6 @@
                     <span class="tag">Storage & File Organization</span>
                 </div>
             </div>
-
-            <div class="project-card">
-                <div class="project-title">Java Programming Training</div>
-                <div style="color: #2196F3; margin-bottom: 10px;">Spoken Tutorial Project, IIT Bombay | February 2025
-                </div>
-                <div class="project-description">
-                    Comprehensive Java programming training covering fundamentals to advanced concepts.
-                </div>
-                <div class="project-tags">
-                    <span class="tag">Java Syntax</span>
-                    <span class="tag">Control Structures</span>
-                    <span class="tag">Classes & Objects</span>
-                    <span class="tag">Java APIs</span>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <div class="project-title">Cloud Climber – AWS Certification Edition Webinar</div>
-                <div style="color: #9C27B0; margin-bottom: 10px;">Spoken Tutorial Project, IIT Bombay | February 2025
-                </div>
-                <div class="project-description">
-                    Specialized webinar on AWS services and serverless computing with real-world case studies.
-                </div>
-                <div class="project-tags">
-                    <span class="tag">AWS Services</span>
-                    <span class="tag">Serverless Computing</span>
-                    <span class="tag">Cloud Solutions</span>
-                    <span class="tag">Case Studies</span>
-                </div>
-            </div>
         </section>
 
         <!-- Blogs Section -->
@@ -1084,6 +1098,7 @@
             <h2 class="section-title">Latest Blogs</h2>
 
             <div class="project-card">
+                <img src="./images_artical/devops.webp" alt="DevOps" style="width: 100%; height: 200px; object-fit: cover; border-radius: 12px; margin-bottom: 15px;">
                 <div class="project-title">What is DevOps? A Beginner's Guide to DevOps Culture and Practices</div>
                 <div style="color: #00D084; margin-bottom: 10px;">Medium | Published on Medium</div>
                 <div class="project-description">
@@ -1102,6 +1117,7 @@
             </div>
 
             <div class="project-card">
+                <img src="./images_artical/flask_docker.webp" alt="Flask Docker" style="width: 100%; height: 200px; object-fit: cover; border-radius: 12px; margin-bottom: 15px;">
                 <div class="project-title">Containerizing Flask Applications with Docker: A Comprehensive Guide</div>
                 <div style="color: #00D084; margin-bottom: 10px;">Medium | Published on Medium</div>
                 <div class="project-description">
@@ -1120,6 +1136,7 @@
             </div>
 
             <div class="project-card">
+                <img src="./images_artical/aws.jpg" alt="AWS" style="width: 100%; height: 200px; object-fit: cover; border-radius: 12px; margin-bottom: 15px;">
                 <div class="project-title">Demystifying AWS: Cloud Basics & 5 Must-Know Services</div>
                 <div style="color: #00D084; margin-bottom: 10px;">Medium | Published on Medium</div>
                 <div class="project-description">
@@ -1148,11 +1165,11 @@
                 </p>
 
                 <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-                    <a href="./Final_Main_Resume.pdf" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 8px;">
+                    <a href="./Resume_DhruvMali.pdf" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 8px;">
                         <span>📄</span>
                         Download PDF
                     </a>
-                    <a href="./Final_Main_Resume.pdf" class="btn btn-secondary" style="display: inline-flex; align-items: center; gap: 8px;">
+                    <a href="./Resume_DhruvMali.pdf" class="btn btn-secondary" style="display: inline-flex; align-items: center; gap: 8px;">
                         <span>👁️</span>
                         View Online
                     </a>
@@ -1167,7 +1184,7 @@
                     Passionate about building scalable cloud solutions and contributing to innovative projects.
                 </div>
                 <div class="project-tags" style="justify-content: center;">
-                    <span class="tag">2+ Years Experience</span>
+                    <span class="tag">2 Years Hand-on Experience</span>
                     <span class="tag">AWS Certified</span>
                     <span class="tag">Full Stack</span>
                     <span class="tag">DevOps</span>
