--- a/index.html
+++ b/index.html
@@ -932,6 +932,7 @@
                     <span class="tag">Boto3</span>
                     <span class="tag">Bootstrap 5</span>
                 </div>
+                <a href="https://github.com/Dhruv-Mali/AWS-S3-Cloud-based-File-Storage-and-Sharing-System.git" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">View on GitHub</a>
             </div>
 
             <div class="project-card">
@@ -964,6 +965,26 @@
                     <span class="tag">GitHub Actions</span>
                     <span class="tag">CI/CD</span>
                 </div>
+                <a href="https://github.com/Dhruv-Mali/CI-CD_Pipline.git" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">View on GitHub</a>
+            </div>
+
+            <div class="project-card">
+                <div class="project-title">Django E-commerce Platform</div>
+                <div class="project-description">
+                    Full-stack e-commerce web application built with Django 4.2, featuring Stripe payment integration and guest checkout.
+                    Implemented real-time cart updates with AJAX, automatic customer profile creation using Django signals, and cookie-based cart for guests.
+                    Built responsive UI with Bootstrap 5, product search and category filtering, stock management, and order tracking system.
+                    Containerized with Docker for easy deployment and scalability.
+                </div>
+                <div class="project-tags">
+                    <span class="tag">Django</span>
+                    <span class="tag">Python</span>
+                    <span class="tag">Stripe API</span>
+                    <span class="tag">Bootstrap 5</span>
+                    <span class="tag">Docker</span>
+                    <span class="tag">SQLite</span>
+                </div>
+                <a href="https://github.com/Dhruv-Mali/E-commerce-website-master.git" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">View on GitHub</a>
             </div>
         </section>
 
