Add Serverless To-Do List Application to projects section

--- a/index.html
+++ b/index.html
@@ -936,6 +936,25 @@
             </div>
 
             <div class="project-card">
+                <div class="project-title">Serverless To-Do List Application</div>
+                <div class="project-description">
+                    Built a fully serverless task management web application using AWS services with zero server management.
+                    Implemented RESTful API with API Gateway and Lambda for CRUD operations on DynamoDB.
+                    Designed responsive frontend hosted on S3 with real-time task updates and duplicate ID prevention.
+                    Achieved 100% serverless architecture with auto-scaling and high availability.
+                </div>
+                <div class="project-tags">
+                    <span class="tag">AWS Lambda</span>
+                    <span class="tag">API Gateway</span>
+                    <span class="tag">DynamoDB</span>
+                    <span class="tag">S3</span>
+                    <span class="tag">Python</span>
+                    <span class="tag">JavaScript</span>
+                </div>
+                <a href="https://github.com/Dhruv-Mali/Serverless-To-Do-List-Application.git" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">View on GitHub</a>
+            </div>
+
+            <div class="project-card">
                 <div class="project-title">Online Book Store</div>
                 <div class="project-description">
                     A comprehensive online book store application that allows users to browse, search, and purchase books.
