--- a/index.html
+++ b/index.html
@@ -1205,11 +1205,11 @@
                 </p>
 
                 <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-                    <a href="./Resume_DhruvMali.pdf" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 8px;">
+                    <a href="./Dhruv_Mali_8980237478.pdf" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 8px;">
                         <span>📄</span>
                         Download PDF
                     </a>
-                    <a href="./Resume_DhruvMali.pdf" class="btn btn-secondary" style="display: inline-flex; align-items: center; gap: 8px;">
+                    <a href="./Dhruv_Mali_8980237478.pdf" class="btn btn-secondary" style="display: inline-flex; align-items: center; gap: 8px;">
                         <span>👁️</span>
                         View Online
                     </a>
