--- a/index.html
+++ b/index.html
@@ -1138,6 +1138,24 @@
             <h2 class="section-title">Latest Blogs</h2>
 
             <div class="project-card">
+                <img src="./images_artical/ChatGPT Image Dec 4, 2025, 10_18_40 PM.png" alt="Serverless Architecture" style="width: 100%; height: 200px; object-fit: cover; border-radius: 12px; margin-bottom: 15px;">
+                <div class="project-title">Building a Serverless To-Do List Application: My Hands-On Journey into Serverless Architecture</div>
+                <div style="color: #00D084; margin-bottom: 10px;">Medium | Published on Medium</div>
+                <div class="project-description">
+                    A hands-on journey into serverless architecture, building a fully functional to-do list application using AWS Lambda, API Gateway, DynamoDB, and S3. Learn about the benefits, challenges, and real-world implementation of serverless computing.
+                </div>
+                <div class="project-tags">
+                    <span class="tag">Serverless</span>
+                    <span class="tag">AWS Lambda</span>
+                    <span class="tag">API Gateway</span>
+                    <span class="tag">DynamoDB</span>
+                </div>
+                <a href="https://medium.com/@dhruvmali9039/building-a-serverless-to-do-list-application-my-hands-on-journey-into-serverless-architecture-c8dfb4a790eb"
+                    target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">Read
+                    Article</a>
+            </div>
+
+            <div class="project-card">
                 <img src="./images_artical/devops.webp" alt="DevOps" style="width: 100%; height: 200px; object-fit: cover; border-radius: 12px; margin-bottom: 15px;">
                 <div class="project-title">What is DevOps? A Beginner's Guide to DevOps Culture and Practices</div>
                 <div style="color: #00D084; margin-bottom: 10px;">Medium | Published on Medium</div>
