--- a/index.html
+++ b/index.html
@@ -1073,6 +1073,20 @@
             <h2 class="section-title">Certifications</h2>
 
             <div class="project-card">
+                <div class="project-title">AWS Certified Cloud Practitioner</div>
+                <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services</div>
+                <div class="project-description">
+                    Foundational understanding of AWS Cloud, services, and terminology. Validated knowledge of AWS Cloud concepts, security, technology, and billing and pricing.
+                </div>
+                <div class="project-tags">
+                    <span class="tag">AWS Cloud</span>
+                    <span class="tag">Cloud Computing</span>
+                    <span class="tag">AWS Services</span>
+                    <span class="tag">Security</span>
+                </div>
+            </div>
+
+            <div class="project-card">
                 <img src="./certification/aws-academy-graduate-cloud-foundations-training-bad.png" alt="AWS Cloud Foundations" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
                 <div class="project-title">AWS Academy Graduate - AWS Academy Cloud Foundations</div>
                 <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services | April 07, 2025</div>
