--- a/index.html
+++ b/index.html
@@ -1073,6 +1073,7 @@
             <h2 class="section-title">Certifications</h2>
 
             <div class="project-card">
+                <img src="./certification/aws-certified-cloud-practitioner.png" alt="AWS Certified Cloud Practitioner" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
                 <div class="project-title">AWS Certified Cloud Practitioner</div>
                 <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services</div>
                 <div class="project-description">
