Add detailed information and Credly verification link for AWS Cloud Practitioner

--- a/index.html
+++ b/index.html
@@ -1075,16 +1075,20 @@
             <div class="project-card">
                 <img src="./certification/aws-certified-cloud-practitioner.png" alt="AWS Certified Cloud Practitioner" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
                 <div class="project-title">AWS Certified Cloud Practitioner</div>
-                <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services</div>
+                <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services | January 2025</div>
                 <div class="project-description">
-                    Foundational understanding of AWS Cloud, services, and terminology. Validated knowledge of AWS Cloud concepts, security, technology, and billing and pricing.
+                    Earned AWS Certified Cloud Practitioner certification demonstrating foundational knowledge of AWS Cloud.
+                    Validated expertise in AWS Cloud concepts, security and compliance, core AWS services, and billing and pricing models.
+                    Capable of defining AWS Cloud and its value proposition, identifying AWS services for common use cases, and understanding AWS security best practices.
                 </div>
                 <div class="project-tags">
                     <span class="tag">AWS Cloud</span>
                     <span class="tag">Cloud Computing</span>
                     <span class="tag">AWS Services</span>
-                    <span class="tag">Security</span>
+                    <span class="tag">Security & Compliance</span>
+                    <span class="tag">Cloud Economics</span>
                 </div>
+                <a href="https://www.credly.com/badges/17ea902a-bea7-4f32-bf17-07b6a71a9338/public_url" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">Verify on Credly</a>
             </div>
 
             <div class="project-card">
