Add Credly verification links for AWS Academy certifications

--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,7 @@
                     <span class="tag">AWS Core Services</span>
                     <span class="tag">AWS Support</span>
                 </div>
+                <a href="https://www.credly.com/badges/9616734a-0963-4aa6-bba5-4d62855552e3/public_url" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">Verify on Credly</a>
             </div>
 
             <div class="project-card">
@@ -1119,6 +1120,7 @@
                     <span class="tag">High Availability</span>
                     <span class="tag">Scalability</span>
                 </div>
+                <a href="https://www.credly.com/badges/97e1f16d-be1b-4233-bdb1-6c8cf23e9f2d/public_url" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">Verify on Credly</a>
             </div>
 
             <div class="project-card">
