--- a/index.html
+++ b/index.html
@@ -500,6 +500,76 @@
             border-radius: 2px;
         }
 
+        /* Compact Certifications */
+        .cert-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin: 32px 0;
+        }
+
+        .cert-card {
+            background: var(--glass-primary);
+            border-radius: 12px;
+            padding: 20px;
+            border: 1px solid var(--glass-border);
+            backdrop-filter: blur(10px);
+            transition: all 0.3s ease;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .cert-card:hover {
+            background: var(--glass-secondary);
+            transform: translateY(-5px);
+            box-shadow: 0 10px 30px rgba(255, 255, 255, 0.2);
+        }
+
+        .cert-badge {
+            width: 100%;
+            height: 120px;
+            object-fit: contain;
+            margin-bottom: 15px;
+            border-radius: 8px;
+        }
+
+        .cert-title {
+            color: var(--text-primary);
+            font-size: 1.1rem;
+            font-weight: 600;
+            margin-bottom: 8px;
+            line-height: 1.3;
+        }
+
+        .cert-issuer {
+            font-size: 0.9rem;
+            margin-bottom: 10px;
+        }
+
+        .cert-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 6px;
+            margin-top: auto;
+            padding-top: 10px;
+        }
+
+        .cert-tag {
+            background: rgba(255, 255, 255, 0.1);
+            color: var(--text-secondary);
+            padding: 4px 10px;
+            border-radius: 12px;
+            font-size: 0.75rem;
+            border: 1px solid rgba(255, 255, 255, 0.15);
+        }
+
+        .cert-verify {
+            margin-top: 12px;
+            padding: 8px 16px;
+            font-size: 0.85rem;
+            text-align: center;
+        }
+
         /* Contact section */
         .contact-container {
             display: grid;
@@ -725,6 +795,10 @@
 
             .section-title {
                 font-size: 2rem;
+            }
+
+            .cert-grid {
+                grid-template-columns: 1fr;
             }
         }
 
@@ -1071,85 +1145,59 @@
         <!-- Certifications Section -->
         <section id="certifications" class="glass-card">
             <h2 class="section-title">Certifications</h2>
+            <div class="cert-grid">
+                <div class="cert-card">
+                    <img src="./certification/aws-certified-cloud-practitioner.png" alt="AWS Certified Cloud Practitioner" class="cert-badge">
+                    <div class="cert-title">AWS Certified Cloud Practitioner</div>
+                    <div class="cert-issuer" style="color: #FF9900;">Amazon Web Services | Jan 2025</div>
+                    <div class="cert-tags">
+                        <span class="cert-tag">AWS Cloud</span>
+                        <span class="cert-tag">Security</span>
+                        <span class="cert-tag">Cloud Economics</span>
+                    </div>
+                    <a href="https://www.credly.com/badges/17ea902a-bea7-4f32-bf17-07b6a71a9338/public_url" target="_blank" class="btn btn-secondary cert-verify">Verify</a>
+                </div>
 
-            <div class="project-card">
-                <img src="./certification/aws-certified-cloud-practitioner.png" alt="AWS Certified Cloud Practitioner" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
-                <div class="project-title">AWS Certified Cloud Practitioner</div>
-                <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services | January 2025</div>
-                <div class="project-description">
-                    Earned AWS Certified Cloud Practitioner certification demonstrating foundational knowledge of AWS Cloud.
-                    Validated expertise in AWS Cloud concepts, security and compliance, core AWS services, and billing and pricing models.
-                    Capable of defining AWS Cloud and its value proposition, identifying AWS services for common use cases, and understanding AWS security best practices.
+                <div class="cert-card">
+                    <img src="./certification/aws-academy-graduate-cloud-foundations-training-bad.png" alt="AWS Cloud Foundations" class="cert-badge">
+                    <div class="cert-title">AWS Academy Cloud Foundations</div>
+                    <div class="cert-issuer" style="color: #FF9900;">AWS Academy | Apr 2025</div>
+                    <div class="cert-tags">
+                        <span class="cert-tag">AWS Architecture</span>
+                        <span class="cert-tag">Core Services</span>
+                    </div>
+                    <a href="https://www.credly.com/badges/9616734a-0963-4aa6-bba5-4d62855552e3/public_url" target="_blank" class="btn btn-secondary cert-verify">Verify</a>
                 </div>
-                <div class="project-tags">
-                    <span class="tag">AWS Cloud</span>
-                    <span class="tag">Cloud Computing</span>
-                    <span class="tag">AWS Services</span>
-                    <span class="tag">Security & Compliance</span>
-                    <span class="tag">Cloud Economics</span>
-                </div>
-                <a href="https://www.credly.com/badges/17ea902a-bea7-4f32-bf17-07b6a71a9338/public_url" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">Verify on Credly</a>
-            </div>
 
-            <div class="project-card">
-                <img src="./certification/aws-academy-graduate-cloud-foundations-training-bad.png" alt="AWS Cloud Foundations" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
-                <div class="project-title">AWS Academy Graduate - AWS Academy Cloud Foundations</div>
-                <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services | April 07, 2025</div>
-                <div class="project-description">
-                    Comprehensive foundation in AWS cloud computing concepts and core services.
+                <div class="cert-card">
+                    <img src="./certification/aws-academy-graduate-cloud-architecting-training-ba (1).png" alt="AWS Cloud Architecting" class="cert-badge">
+                    <div class="cert-title">AWS Academy Cloud Architecting</div>
+                    <div class="cert-issuer" style="color: #FF9900;">AWS Academy | Oct 2025</div>
+                    <div class="cert-tags">
+                        <span class="cert-tag">Cloud Architecture</span>
+                        <span class="cert-tag">High Availability</span>
+                    </div>
+                    <a href="https://www.credly.com/badges/97e1f16d-be1b-4233-bdb1-6c8cf23e9f2d/public_url" target="_blank" class="btn btn-secondary cert-verify">Verify</a>
                 </div>
-                <div class="project-tags">
-                    <span class="tag">AWS Architecture</span>
-                    <span class="tag">AWS Cloud</span>
-                    <span class="tag">AWS Core Services</span>
-                    <span class="tag">AWS Support</span>
-                </div>
-                <a href="https://www.credly.com/badges/9616734a-0963-4aa6-bba5-4d62855552e3/public_url" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">Verify on Credly</a>
-            </div>
 
-            <div class="project-card">
-                <img src="./certification/aws-academy-graduate-cloud-architecting-training-ba (1).png" alt="AWS Cloud Architecting" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
-                <div class="project-title">AWS Academy Graduate - Cloud Architecting - Training Badge</div>
-                <div style="color: #FF9900; margin-bottom: 10px;">Amazon Web Services Training and Certification | October 01, 2025</div>
-                <div class="project-description">
-                    Advanced training in designing and deploying scalable, highly available, and fault-tolerant systems on AWS.
+                <div class="cert-card">
+                    <img src="./certification/microsoft-certified-fundamentals-badge.svg" alt="Microsoft Azure" class="cert-badge">
+                    <div class="cert-title">Microsoft Azure Fundamentals</div>
+                    <div class="cert-issuer" style="color: #0078D4;">Microsoft | Jun 2023</div>
+                    <div class="cert-tags">
+                        <span class="cert-tag">Azure Cloud</span>
+                        <span class="cert-tag">Cloud Services</span>
+                    </div>
                 </div>
-                <div class="project-tags">
-                    <span class="tag">Cloud Architecture</span>
-                    <span class="tag">AWS Solutions</span>
-                    <span class="tag">High Availability</span>
-                    <span class="tag">Scalability</span>
-                </div>
-                <a href="https://www.credly.com/badges/97e1f16d-be1b-4233-bdb1-6c8cf23e9f2d/public_url" target="_blank" class="btn btn-secondary" style="margin-top: 15px; display: inline-flex;">Verify on Credly</a>
-            </div>
 
-            <div class="project-card">
-                <img src="./certification/microsoft-certified-fundamentals-badge.svg" alt="Microsoft Azure" style="width: 100%; height: 200px; object-fit: contain; border-radius: 12px; margin-bottom: 15px;">
-                <div class="project-title">Microsoft Azure Fundamentals</div>
-                <div style="color: #0078D4; margin-bottom: 10px;">Microsoft | June 22, 2023
-                </div>
-                <div class="project-description">
-                    Foundational knowledge of cloud services and how those services are provided with Microsoft Azure.
-                </div>
-                <div class="project-tags">
-                    <span class="tag">Azure Cloud</span>
-                    <span class="tag">Cloud Services</span>
-                    <span class="tag">Azure Architecture</span>
-                    <span class="tag">Cloud Computing</span>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <div class="project-title">DBMS Course – Master the Fundamentals and Advanced Concepts</div>
-                <div style="color: #4CAF50; margin-bottom: 10px;">Scaler Topics | November 2024</div>
-                <div class="project-description">
-                    Advanced database management concepts covering architecture, SQL, and optimization techniques.
-                </div>
-                <div class="project-tags">
-                    <span class="tag">Database Architecture</span>
-                    <span class="tag">SQL</span>
-                    <span class="tag">ACID Properties</span>
-                    <span class="tag">Storage & File Organization</span>
+                <div class="cert-card">
+                    <div class="cert-title">DBMS - Fundamentals & Advanced</div>
+                    <div class="cert-issuer" style="color: #4CAF50;">Scaler Topics | Nov 2024</div>
+                    <div class="cert-tags">
+                        <span class="cert-tag">Database</span>
+                        <span class="cert-tag">SQL</span>
+                        <span class="cert-tag">ACID</span>
+                    </div>
                 </div>
             </div>
         </section>
