Update portfolio with new content and assets

--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
         <!-- Hero Section -->
         <section id="home" class="hero">
             <div class="hero-avatar">
-                <img src="./elogo4.png" alt="Dhruv Mali"
+                <img src="./Image.jpg" alt="Dhruv Mali"
                     style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" />
             </div>
             <h1>Dhruv Mali</h1>
@@ -1276,11 +1276,11 @@
                 </p>
 
                 <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-                    <a href="./Dhruv_Mali_8980237478.pdf" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 8px;">
+                    <a href="./MaliDhruv_resume.pdf" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 8px;">
                         <span>📄</span>
                         Download PDF
                     </a>
-                    <a href="./Dhruv_Mali_8980237478.pdf" class="btn btn-secondary" style="display: inline-flex; align-items: center; gap: 8px;">
+                    <a href="./MaliDhruv_resume.pdf" class="btn btn-secondary" style="display: inline-flex; align-items: center; gap: 8px;">
                         <span>👁️</span>
                         View Online
                     </a>
