Update portfolio content and add resume

--- a/index.html
+++ b/index.html
@@ -1276,11 +1276,11 @@
                 </p>
 
                 <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-                    <a href="./MaliDhruv_resume.pdf" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 8px;">
+                    <a href="./aws-resume.pdf" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 8px;">
                         <span>📄</span>
                         Download PDF
                     </a>
-                    <a href="./MaliDhruv_resume.pdf" class="btn btn-secondary" style="display: inline-flex; align-items: center; gap: 8px;">
+                    <a href="./aws-resume.pdf" class="btn btn-secondary" style="display: inline-flex; align-items: center; gap: 8px;">
                         <span>👁️</span>
                         View Online
                     </a>
